2012-02-11 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.

	* src/common/curlpersomodifattrb.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlpersoheaderdelete.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlpersoheaderadd.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlinterface.h|.cpp: CamelCased and header called hpp.
	* src/common/curlimport.h: CamelCased and header called hpp.

2012-02-10 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.
	* src/common/curlgetfile.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlfiletoxml.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlaccounttoggleblacklist.h|cpp: CamelCased and header
	called hpp.

2012-02-01 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.
	* src/common/curlaccountdelete.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlaccountconfirmmail.h|.cpp: CamelCased and
	header called hpp.
	* src/common/curlaccountadd.h|.cpp: CamelCased and header called hpp.
	* src/common/clientconnect.h|.cpp: CamelCased and header called hpp.
	* src/common/chartserie.h|.cpp: CamelCased and header called hpp.
	* src/common/chartline.h|.cpp: CamelCased and header called hpp.
	* src/common/chartbase.h|.cpp: CamelCased and header called hpp.

2012-01-22 Jérôme Pasquier  <rainbru@free.fr>

	* Makefile.am (EXTRA_DIST): Add manpages to make the distribution
	finally complete.

	* src/client/Makefile.am (rainbrurpg_HEADERS=): Added all headers files
	(missing in the arcive).

	* m4/: Add Makefile.am to fix missing rb_uml.m4 file.

	* stc/testHelpers/Makefile.am (RenderSystem_Dummy_la_HEADERS): Add
	missing file DummyRenderSystem.hpp.
	* src/common/Makefile.am (h_sources): Add missing files singleton.h,