@@ -359,6 +359,7 @@ name, date, heure, gamestate, position, name perso, name server, versions
     improvment until new client is buildable.
     see http://rainbrurpg.sourceforge.net/wiki/bin/view/Concept/NewProjectLayout
 **** TODO Code refactoring to follow coding standards
+     CLOCK: [2012-02-21 mar. 11:27]--[2012-02-21 mar. 11:54] =>  0:27
      CLOCK: [2012-02-11 sam. 10:09]--[2012-02-11 sam. 10:42] =>  0:33
      CLOCK: [2012-02-01 mer. 16:10]--[2012-02-01 mer. 18:05] =>  1:55
      CLOCK: [2012-01-22 dim. 09:26]--[2012-01-22 dim. 11:47] =>  2:21
