@@ -36,7 +36,7 @@
 
 #include "rainbrudef.h" // For gettext stuff
 #include "globaluri.h"
-#include "curlsubmitform.h"
+#include "CurlSubmitForm.hpp"
 #include "xmlpersolist.h"
 
 using namespace RainbruRPG::Network::Ident;
