@@ -25,7 +25,7 @@
   *
   */
 
-#include "curlserveradd.h"
+#include "CurlServerAdd.hpp"
 
 /** The default contructor
   *
