@@ -35,7 +35,7 @@
 
 #include <string>
 #include <globaluri.h>
-#include <curlsubmitform.h>
+#include <CurlSubmitForm.hpp>
 #include <xmlserverlist.h>
 
 #include "rainbrudef.h" // For the gettext stuff
